wk_taa_taaqa/src/objects/Custodial__c.object
<CustomObject>
    <description>Custody of Accounts if already existing representatives are switching.</description>
    <fields>
        <fullName>CurrentRepresentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Current Repersentative</inlineHelpText>
        <label>Current Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custodials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustodialRepersentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Custodial Repersentative</inlineHelpText>
        <label>Custodial Repersentative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custodials1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTN_Current_Rep__c</fullName>
        <inlineHelpText>Current Rep DTN</inlineHelpText>
        <label>DTN Current Rep</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTN_Custodial_Rep__c</fullName>
        <inlineHelpText>Dtns of Custodial representative</inlineHelpText>
        <label>DTN Custodial Rep</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DTN_Open_Territory_User__c</fullName>
        <label>DTN Open Territory User</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTN_new_Rep__c</fullName>
        <inlineHelpText>Dtn of New representative</inlineHelpText>
        <label>DTN new Rep</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewRepresentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>New Representative replacement of current Representative.</inlineHelpText>
        <label>New Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custodials2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Custodial</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>DTN_Current_Rep__c</columns>
        <columns>DTN_Custodial_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Custodial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custodials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>